# mycelio

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: fetch-verb-plan.md
examples/: discover_demo.py  route_demo.py
examples/end-to-end/: README.md  generate_manifests.py
mycd/: __init__.py  __main__.py  affordances.py  extractor.py  http_shim.py  outline.py  server.py
mycelio/: __init__.py  client.py  codegen.py  crypto.py  frame.py  manifest.py  payload.py  tls_dev.py  verbs.py
spec/: manifest-v0.md  protocol-v0.md
tests/: test_codegen.py  test_crypto.py  test_e2e.py  test_fetch.py  test_frame.py  test_http_shim.py  test_manifest.py  test_outline.py  test_payload.py  test_route.py  test_tls.py
