[project]
name = "mycelio"
version = "0.0.1"
description = "Binary, agent-native, peer-to-peer protocol for SaaS discovery and invocation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Oscar Castillo" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Networking",
]
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
server = [
    "anyio>=4.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mycd = "mycd.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mycelio*", "mycd*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
